add webpack sass

--- a/public/directives/nav/nav.html
+++ b/public/directives/nav/nav.html
@@ -1,15 +1,14 @@
 <nav>
-  <ul>
+  <ul class="nav-left">
     <li><a ui-sref="home" class="home"></a></li>
     <li><a ui-sref="shavePlans" class="shavePlans">shave plans</a></li>
     <li><a ui-sref="products" class="products">products</a></li>
     <li><a class="about"></a>about</li>
   </ul>
-</nav>
-
-<nav>
-  <ul>
+  
+  <ul class="nav-right">
     <li><a ui-sref="help" class="help">help</a></li>
+    <li><a ui-sref="signIn" class="signIn">signIn</a></li>
     <li><a ui-sref="profile" class="profile">profile</a></li>
     <li><a class="cart"></a></li>
   </ul>
