--- a/public/directives/nav/nav.html
+++ b/public/directives/nav/nav.html
@@ -1,15 +1,19 @@
 <nav>
   <ul class="nav-left">
-    <li><a ui-sref="home" class="home"></a></li>
-    <li><a ui-sref="shavePlans" class="shavePlans">shave plans</a></li>
-    <li><a ui-sref="products" class="products">products</a></li>
-    <li><a class="about"></a>about</li>
+    <li class="home"><a ui-sref="home"></a></li>
+    <li class="shavePlans"><a ui-sref="shavePlans">shave plans</a></li>
+    <li class="products"><a ui-sref="products">products</a></li>
+    <li><a class="about">about</a></li>
   </ul>
-  
+
   <ul class="nav-right">
-    <li><a ui-sref="help" class="help">help</a></li>
-    <li><a ui-sref="signIn" class="signIn">signIn</a></li>
-    <li><a ui-sref="profile" class="profile">profile</a></li>
-    <li><a class="cart"></a></li>
+    <li class="help"><a ui-sref="help">help</a></li>
+    <li class="signIn"><a ui-sref="signIn">signIn</a></li>
+    <li class="profile"><a ui-sref="profile">profile</a></li>
+    <li class="cart"><a>
+      <span class="cart-text">cart</span>
+      <span class="cart-icon"></span>
+    </a></li>
   </ul>
 </nav>
+<div class="clear"></div>
