--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,6 @@
   <ui-view></ui-view>
   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.1/angular.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.4.2/angular-ui-router.js"></script>
-  <script src="../index.min.js"></script>
+  <script src="./set.min.js"></script>
 </body>
 </html>
