ng-repeat for products

--- a/public/directives/colorCircle/colorCircle.html
+++ b/public/directives/colorCircle/colorCircle.html
@@ -1,7 +1,7 @@
 <div class="circles">
   <ul>
-    <li class="brown"><a></a></li>
-    <li class="blue"><a></a></li>
-    <li class="gray"><a></a></li>
+    <li class="brown"><a ng-click="changeColor('brown')"></a></li>
+    <li class="blue" ng-click="changeColor('blue')"><a></a></li>
+    <li class="gray" ng-click="changeColor('gray')"><a></a></li>
   </ul>
 </div>
