--- a/public/directives/nav/nav.html
+++ b/public/directives/nav/nav.html
@@ -10,7 +10,7 @@
     <li class="help"><a ui-sref="help">help</a></li>
     <li class="signIn" ng-hide="hasUser"><a ui-sref="signIn">signIn</a></li>
     <li class="profile" ng-show="hasUser"><a ui-sref="details">profile</a></li>
-    <li class="cart"><a>
+    <li class="cart" ui-sref="cart"><a>
       <span class="cart-text">cart</span>
       <span class="cart-icon"></span>
     </a></li>
