--- a/public/directives/quantity/quantity.html
+++ b/public/directives/quantity/quantity.html
@@ -1,5 +1,5 @@
 <div class="quantity">
   <span>-</span>
-  <input type="number">
+  <input type="number" ng-model="quantity">
   <span>+</span>
 </div>
