--- a/public/directives/quantity/quantity.html
+++ b/public/directives/quantity/quantity.html
@@ -1,5 +1,5 @@
 <div class="quantity">
-  <span>-</span>
-  <input type="number" ng-model="quantity">
-  <span>+</span>
+  <span ng-click="minusQuantity()">-</span>
+  <input type="number" ng-model="quantity" min="1" max="9999">
+  <span ng-click="addQuantity()">+</span>
 </div>
