finish cart styling and login styling

--- a/public/directives/quantity/quantity.html
+++ b/public/directives/quantity/quantity.html
@@ -1,5 +1,5 @@
 <div class="quantity">
-  <span ng-click="minusQuantity()">-</span>
+  <span ng-click="minusQuantity()" class="minus">-</span>
   <input type="number" ng-model="quantity" min="1" max="9999">
-  <span ng-click="addQuantity()">+</span>
+  <span ng-click="addQuantity()" class="plus">+</span>
 </div>
