--- a/public/index.html
+++ b/public/index.html
@@ -8,12 +8,14 @@
   <link href="https://fonts.googleapis.com/css?family=Muli" rel="stylesheet">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
-<body>
+<body ng-controller="mainCtrl">
   <nav-dir></nav-dir>
   <ui-view></ui-view>
   <footer-dir></footer-dir>
+  <script src="https://js.stripe.com/v2/"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.1/angular.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.4.2/angular-ui-router.js"></script>
+  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/angular-stripe/4.2.12/angular-stripe.js"></script>
   <script src="./set.min.js"></script>
 </body>
 </html>
